--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "brian2694/laravel-toastr": "^5.56",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
